# Wildberries-Reminder-Bot

./: README.md  poetry.toml  pyproject.toml  requirements.txt
wildberriesbot/: bot.py
wildberriesbot/database/: models.py  requests.py
wildberriesbot/handlers/: event_notice.py  handler_scheduler.py  start.py
wildberriesbot/keyboards/: keyboards.py
wildberriesbot/middlewares/: scheduler.py
